--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "firebase": "^3.5.3",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-modal": "^1.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
